# gitbrowser

./: .gitignore  AUDIT.md  Cargo.toml  EXTENSIONS.md  FIXES.md  PLAN-SETTINGS.md  PLAN.md  README.md  REDESIGN.md
.github/workflows/: build-windows.yml
electron/: main.js  package-lock.json  package.json  preload-telegram.js  preload.js  rust-bridge.js
electron/ui/: ai.html  bookmarks.html  components.css  design-tokens.css  downloads.html  extensions.html  github.html  history.html  newtab.html  passwords.html  settings.html  sidebar.html  splash.html  toolbar.html
installer/: installer.html  main.js  package.json  preload.js
locales/: en.json  ru.json
resources/styles/: common.css  dark.css  light.css
resources/ui/: app.js  app2.js  app3.js  app4.js  browser.html  settings_content.html  shell.js  styles.css  styles2.css  toolbar.js
src/: app.rs  lib.rs  main.rs  rpc_handler.rs  rpc_server.rs
src/database/: connection.rs  migrations.rs  mod.rs
src/managers/: bookmark_manager.rs  download_manager.rs  history_manager.rs  mod.rs  permission_manager.rs  session_manager.rs  shortcut_manager.rs  tab_manager.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/services/: ai_assistant.rs  crash_recovery.rs  crypto_service.rs  extension_framework.rs  github_integration.rs  localization_engine.rs  mod.rs  password_manager.rs  privacy_engine.rs  reader_mode.rs  settings_engine.rs  theme_engine.rs  update_manager.rs
src/types/: ai.rs  bookmark.rs  credential.rs  download.rs  errors.rs  extension.rs  github.rs  history.rs  mod.rs  permission.rs  privacy.rs  reader.rs  session.rs  settings.rs  tab.rs  update.rs
src/ui/: mod.rs  webview_app.rs
tests/property/: bookmark_operations_test.rs  history_operations_test.rs  localization_test.rs  password_roundtrip_test.rs  session_roundtrip_test.rs  settings_roundtrip_test.rs  tab_operations_test.rs
tests/unit/: ai_assistant_test.rs  bookmark_manager_test.rs  crypto_service_test.rs  database_test.rs  errors_test.rs  extension_framework_test.rs  github_integration_test.rs  history_manager_test.rs  localization_engine_test.rs  password_manager_test.rs  privacy_engine_test.rs  rpc_handler_test.rs  security_test.rs  settings_engine_test.rs  tab_manager_test.rs
